# dd-tech-lab-companions

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  TRANSMITTAL_MANIFEST_2026-06-16.json
cross_border_diligence_atlas/: README.md  pyproject.toml  requirements.txt
cross_border_diligence_atlas/data/redacted_outputs/: AR_01_rns_entity_screen.csv  AR_02_boletin_timeline_builder.csv  BR_01_entity_registry_screen.csv  BR_02_sanctions_procurement_crosscheck.csv  README.md  US_memo_country_risk_flags.csv
cross_border_diligence_atlas/data/sample/: README.md
cross_border_diligence_atlas/data/synthetic/: argentina_rns.csv  brazil_entities.csv  brazil_sanctions.csv  gazette_events.csv
cross_border_diligence_atlas/docs/: argentina_source_map.md  brazil_source_map.md  data_dictionary.md  data_sources.md  dependency_review.md  limitations.md  update_log.md
cross_border_diligence_atlas/notebooks/: AR_01_rns_entity_screen.ipynb  AR_01_rns_entity_screen.py  AR_02_boletin_timeline_builder.ipynb  AR_02_boletin_timeline_builder.py  BR_01_entity_registry_screen.ipynb  BR_01_entity_registry_screen.py  BR_02_sanctions_procurement_crosscheck.ipynb  BR_02_sanctions_procurement_crosscheck.py  US_memo_country_risk_flags.ipynb  US_memo_country_risk_flags.py
cross_border_diligence_atlas/src/crossborder_dd/: __init__.py  argentina_rns_parser.py  brazil_cnpj_parser.py  brazil_sanctions_screen.py  country_registry_map.py  export_csv.py  (+2 more)
cross_border_diligence_atlas/tests/: test_normalize_names.py  test_notebook_reproducibility.py  test_parsers_and_timeline.py
(+56 files in other folders)
